fix for language button overlap

--- a/2018/style.css
+++ b/2018/style.css
@@ -59,6 +59,7 @@ body {
 }
 
 #language {
+    display: flex;
     float: right;
 }
 
@@ -146,3 +147,5 @@ body {
 .underline {
     text-decoration: underline;
 }
+
+@media (max-width: 395px) {#header_text { display:none;}}
